# Team04

./: .bazelrc  .clang-tidy  .dockerignore  .gitignore  BUILD  Dockerfile  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: arduino_lint.yml  bazel_build.yml  bazel_build_aarch64.yml  bazel_build_x86.yml  bazel_buildifier.yml  bazel_test.yml  check_pr_description.yml  clang_format.yml  clang_tidy.yml  coverage.yml  coverage_compare.yml  coverage_deploy.yml  coverage_summary.yml  docker.yml  docker_build.yml  docker_push.yml  (+7 more)
applications/: BUILD
bazel/: BUILD
com-middleware/: BUILD  main.cpp
config/: ubuntu.sources
controller/: BUILD  coordinate_transformer.py  mpc.py
docs/: ai.md  architecture.md  base-car.md  cameratest.md  carla-client-script.md  carla-server-setup.md  carla.md  carmotion.md  communication.md  ethernet.md  interprocess_communication.md  joystick-class.md  joystick.md  remotemove-class.md  requirements.md  soa-automotive-ai.md
examples/: BUILD
instrument-cluster/: .bazelrc  BUILD  DataManager.cpp  DataManager.hpp  Main.qml  ScreenUI.qml  WORKSPACE  basicdisplay.cpp  basicdisplay.h  basicdisplay.ui  config.h  display.cpp  display.h  display.ui  instrument-cluster.pro  main.cpp  qt.BUILD  qt_config.bzl  rpm.cpp  rpm.h  speed.cpp  speed.h  zmqpublisher.cpp  zmqpublisher.h  zmqsubscriber.cpp  zmqsubscriber.h
lane-detector/: BUILD
lane-detector-yolo/: BUILD
mq/: BUILD
multitask-model/: BUILD
platform/: BUILD
toolchain/: BUILD  cc_toolchain_config.bzl
(+188 files in other folders)
