bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.0.17")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    ignore_root_user_error = True,
    python_version = "3.12",
)

# Compile commands
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "platforms", version = "0.0.10")

register_toolchains(
    "//toolchain/x86_64_linux",
    "//toolchain/aarch64_linux",
)

# cppzmq (header only)
bazel_dep(name = "cppzmq", version = "4.10.0")
